app/stylesheets/_faq.sass
body.application.faq
  background-image: url('/images/clouds.png')
  background-repeat: repeat-x
  text-align: center
  h1
    width: 960px
    color: #3b6085
    line-height: 1.2
    font-size: 25px
    padding: 0 20px
    margin: 5px auto 20px
    text-align: center
    +text-shadow(#bfc8cf, 1px, 1px, 1px)
  #main
    width: 755px
    margin: 0 auto
    position: relative
    text-align: left
    h2
      color: #525252
      font-size: 20px
      text-align: center
    p
      margin: 10px 0
    #sections_picker
      position: absolute
      right: -135px
      top: 30px
      width: 170px
      background-color: #b53f3c
      color: white
      padding: 10px 5px 10px 30px
      z-index: 1
      +border-radius(15px)
      border: 10px solid #922f2c
      +box-shadow($default-box-shadow-color, 0, 0, $default-box-shadow-blur, 0, inset)
      h2
        color: white
        margin: 0 0 10px
      li
        margin: 5px 0
        a
          color: white
          text-decoration: none

        
    #content
      position: relative
      margin: 50px auto 70px
      +lightbox
      width: 560px
      z-index: 2
      color: #3A3A3A
      h2
        font-size: 26px
        margin-bottom: 20px
      ul
        margin-bottom: 40px
        li
          margin: 10px 0
          a
            color: #b53f3c
            font-size: 18px
            text-decoration: none
          ul
            margin: 5px 20px 5px
            li
              a
                font-size: 16px
                color: #525252
                text-decoration: underline

        
      .section_head
        margin: 50px 0
        font-size: 22px   
        border-bottom: 1px solid #ddd
        border-top: 1px solid #ddd
        padding: 10px 0
      .item_head
        color: #b53f3c
        border-bottom: 1px solid #ddd
        padding-bottom: 2px
        margin: 0
    
      .answer
        font-family: Georgia, times, serif
        font-size: 14px
        p
          margin: 5px 0 20px
          a
            color: #3b6085
            text-decoration: none
      form
        label
          margin: 5px 0
        input
          margin: 10px 0
        input[type="text"]
          border: 1px solid #999
          +border-radius(5px)
          +box-shadow(#ccc, 1px, 1px, 2px, 0, inset)
          padding: 0px 5px
          font-size: 22px
          width: 465px
          +serif
        textarea
          margin: 10px 0 0
          border: 1px solid #999
          +border-radius(5px)
          +box-shadow(#ccc, 1px, 1px, 2px, 0, inset)
          padding: 0px 5px
          font-size: 22px
          width: 465px
          +serif
        input[type="submit"]
          float: right
  .cleared
    clear: both
    height: 1px

         

